<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/example_hint"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="16dp">

        <TextView
                android:id="@+id/fontSizeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/font_size"/>

        <TextView
                android:layout_marginLeft="12dp"
                android:id="@+id/fontSizeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="@string/value_example"/>

    </LinearLayout>

    <SeekBar
            android:layout_marginTop="8dp"
            android:id="@+id/fontSizeSeek"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:max="30"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="16dp">

        <TextView
                android:id="@+id/lineSpacingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/line_spacing"/>

        <TextView
                android:layout_marginLeft="12dp"
                android:id="@+id/lineSpacingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="@string/value_example"/>

    </LinearLayout>

    <SeekBar
            android:layout_marginTop="8dp"
            android:id="@+id/lineSpacingSeek"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:max="30"/>


    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="16dp">

        <TextView
                android:id="@+id/letterSpacingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/letter_spacing"/>

        <TextView
                android:layout_marginLeft="12dp"
                android:id="@+id/letterSpacingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="@string/value_example"/>

    </LinearLayout>

    <SeekBar
            android:layout_marginTop="8dp"
            android:id="@+id/letterSpacingSeek"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:max="30"/>

    <RadioGroup
            android:id="@+id/fontGroup"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:checkedButton="@+id/fontNormal"
            android:orientation="horizontal">

        <RadioButton
                android:id="@+id/fontNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_normal"/>

        <RadioButton
                android:id="@+id/fontBold"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_bold"/>

    </RadioGroup>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="24dp"
                  android:visibility="gone">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="Default"
                  android:textSize="10sp"/>

        <TextView
                android:layout_marginLeft="12dp"
                android:id="@+id/defaultTextHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"/>

    </LinearLayout>

    <TextView
            android:layout_marginTop="4dp"
            android:id="@+id/defaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            tools:text="@string/single_line_example"
            android:background="#7C7C7C"
            android:lines="1"
            android:visibility="gone"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="24dp">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="Single Line"
                  android:textSize="10sp"/>

        <TextView
                android:layout_marginLeft="12dp"
                android:id="@+id/singleLineTextHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"/>

    </LinearLayout>


    <TextView
            android:layout_marginTop="4dp"
            android:id="@+id/singleLineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            tools:text="@string/single_line_example"
            android:background="#4D4D4D"
            android:lines="1"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="12dp">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="Two Lines"
                  android:textSize="10sp"/>

        <TextView
                android:layout_marginLeft="12dp"
                android:id="@+id/multiLineTextHeight"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:textSize="10sp"/>

    </LinearLayout>

    <TextView
            android:layout_marginTop="4dp"
            android:id="@+id/multiLineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:background="#4D4D4D"
            tools:text="@string/multi_line_example"
            android:lines="2"/>

</LinearLayout>